--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
       "php": ">=5.4.0",
-        "guzzlehttp/guzzle": "5.3.*"
+        "guzzlehttp/guzzle": "5.3.*",
+        "guzzlehttp/cache-subscriber": "0.1.*"
     },
     "autoload": {
         "psr-0": {
